--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,6 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add -A
-        git commit --amend -m "Update results"
-        git push --force
+        git add GDIPTV.txt
+        git diff --quiet && git diff --staged --quiet || git commit -m "Update GDIPTV.txt"
+        git push
