--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,15 +12,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Run 广东电信组播.exe and commit
+    - name: Set execute permission for a.exe
+      run: chmod +x ./广东电信组播.exe  # 添加执行权限
+
+    - name: Run a.exe and generate document
       run: |
-        ./广东电信组播.exe  # 运行 广东电信组播.exe，生成文档
+        ./广东电信组播.exe  # 运行 a.exe，生成文档
         git config --global user.email "actions@github.com"  # 配置提交时使用的邮箱
         git config --global user.name "GitHub Actions"  # 配置提交时使用的用户名
-        git add itvlist.txt  # 添加生成的文档到暂存区
+        mv output.txt itv.txt  # 将生成的文档重命名为 itv.txt
+        git add itv.txt  # 添加生成的文档到暂存区
         git commit -m "Add generated document"  # 提交文档到版本库
 
     - name: Push changes to repository
       uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}  # 使用 GitHub Token 授权推送到仓库
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}  # 使用 GitHub Token 授权推送到仓库
