--- a/.github/workflows/udpxy_update.yml
+++ b/.github/workflows/udpxy_update.yml
@@ -34,4 +34,4 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add
+          git add .
