--- a/.github/workflows/GDIPTV-SP_update.yml
+++ b/.github/workflows/GDIPTV-SP_update.yml
@@ -36,4 +36,5 @@ jobs:
           git config --local user.name "GitHub Action"
           git add .
           git commit -m "Update GDIPTV.m3u and GDIPTV-SP.m3u files" || echo "No changes to commit"
+          git pull --rebase origin main
           git push
