--- a/.github/workflows/GDIPTV-SP_update.yml
+++ b/.github/workflows/GDIPTV-SP_update.yml
@@ -5,7 +5,9 @@ on:
     - cron: '0 9 */2 * *' 
   push:
     branches:
-      - main  # 在推送到main分支时也运行
+      - main
+    paths: 
+      - '**.js'
   watch:
     types: [ started ]
   workflow_dispatch:  
