--- a/.github/workflows/GDIPTV-SP_update.yml
+++ b/.github/workflows/GDIPTV-SP_update.yml
@@ -38,5 +38,6 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add ip-port.txt GDIPTV.m3u GDIPTV-SP.m3u
-          git commit -m "Update files" || echo "No changes to commit"
+          git commit -m "Update files" || echo "No changes to commit"  
+          git pull --rebase origin main
           git push origin main
