--- a/.github/workflows/GDIPTV-SP_update.yml
+++ b/.github/workflows/GDIPTV-SP_update.yml
@@ -19,8 +19,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # 获取完整的历史记录，避免冲突
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -36,18 +34,9 @@ jobs:
         run: python $GITHUB_WORKSPACE/GDIPTV-SP.py
 
       - name: Commit and push changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          
-          # 添加并提交更改
-          git add ip-port.txt GDIPTV.m3u GDIPTV-SP.m3u
+          git add .
           git commit -m "Update files" || echo "No changes to commit"
-          
-          # 拉取远程仓库的最新提交并合并
-          git pull origin main || { echo "Pull failed, aborting"; exit 1; }
-
-          # 推送更改到远程仓库
-          git push origin main || { echo "Push failed, aborting"; exit 1; }
+          git push
