--- a/.github/workflows/GDIPTV-SP_update.yml
+++ b/.github/workflows/GDIPTV-SP_update.yml
@@ -37,6 +37,8 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add .
-          git commit -m "Update files" || echo "No changes to commit"
-          git push
+          git add -A
+          if ! git diff --staged --quiet; then
+            git commit -m "Update files" || echo "No changes to commit"
+            git push
+          fi
