--- a/.github/workflows/update_tv.yml
+++ b/.github/workflows/update_tv.yml
@@ -32,7 +32,7 @@ jobs:
         
     - name: Update Results
       run: |
-        cd $GITHUB_WORKSPACE/speedtest
+        cd $GITHUB_WORKSPACE
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
